--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </header>
 
       <main class="content">
-        <div class="staff" id="staff">
+        <section class="staff" id="staff">
           <h2 class="staff__title">Escolhas da Equipe</h2>
           <p class="staff__subtitle">Que nossos leitores adoram</p>
           <ul class="staff__cards">
@@ -131,7 +131,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        </section>
       </main>
     </div>
   </body>
